Kubernetes/configs/user-api.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp($|/)(.*)
            backend:
              serviceName: user-api-service
              servicePort: 9010
              
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-api-swagger-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:          
          - path: /swagger
            backend:
              serviceName: user-api-service
              servicePort: 9010

---
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  selector:
    app: user-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 9010
      targetPort: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: stilux/user-api:v1
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: "/app/config"
              readOnly: true            
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
      volumes:
        - name: config-volume
          projected:
            sources:        
              - configMap:
                  name: app-configmap
                  items:
                    - key: appsettings.json
                      path: appsettings.json        
              - secret:
                  name: app-secret
                  items:
                    - key: appsettings.secrets.json
                      path: appsettings.secrets.json
